--- a/full/proj/imple03.qsf
+++ b/full/proj/imple03.qsf
@@ -42,6 +42,10 @@ set_global_assignment -name TOP_LEVEL_ENTITY imple03
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:01:46  NOVEMBER 24, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.1
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name VHDL_FILE estado_senha.vhd
 set_global_assignment -name VHDL_FILE valor.vhd
 set_global_assignment -name VHDL_FILE temporizador5.vhd
 set_global_assignment -name VHDL_FILE temporizador20.vhd
@@ -52,6 +56,8 @@ set_global_assignment -name VHDL_FILE FSM_Cofre.vhd
 set_global_assignment -name VHDL_FILE ff_d.vhd
 set_global_assignment -name VHDL_FILE demuxx.vhd
 set_global_assignment -name VHDL_FILE conversor.vhd
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name VHDL_FILE imple03.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
